--- a/docs/src/pages/index.css
+++ b/docs/src/pages/index.css
@@ -31,6 +31,11 @@
   max-width: 530px;
 }
 
+.hero-body-text {
+  position: relative;
+  z-index: 999;
+}
+
 .hero-body-logo {
   width: 600px;
   position: absolute;
