--- a/scss/molecule.scss
+++ b/scss/molecule.scss
@@ -1,5 +1,5 @@
-/*! molecule.css v1.0.9 | MIT License */
+/*! molecule.css v1.0.10 | MIT License */
 
 @import "main/all";
-@import "region/all";
+@import "layout/all";
 @import "parts/all";
