--- a/scss/mixin/variable.scss
+++ b/scss/mixin/variable.scss
@@ -142,3 +142,9 @@ $desktop: 1024px;
 $widescreen: 1440px;
 
 $modal-radius: 16px;
+
+//neumor
+$neumor-sha-w: 6px 6px 20px rgba(0, 0, 0, 0.19);
+$neumor-sha-b: -6px -6px 20px rgba(255, 255, 255, 0.33);
+$neumor-sha-hover-w: 6px 6px 20px rgba(0, 0, 0, 0.12);
+$neumor-sha-hover-b: -6px -6px 20px rgba(255, 255, 255, 0.26);
