--- a/scss/molecule.scss
+++ b/scss/molecule.scss
@@ -1,5 +1,6 @@
-/*! molecule.css v1.0.11 | MIT License */
+/*! molecule.css v1.1.0 | MIT License */
 
 @import "main/all";
 @import "layout/all";
 @import "parts/all";
+@import "effect/all";
