--- a/scss/parts/_all.scss
+++ b/scss/parts/_all.scss
@@ -1,6 +1,6 @@
 @import "button";
 @import "card";
-@import "dropdown.scss";
+@import "dropdown";
 @import "fab";
 @import "file";
 @import "inp-text";
