--- a/scss/layout/hero.scss
+++ b/scss/layout/hero.scss
@@ -13,7 +13,7 @@
       text-align: center;
     }
   }
-  &.size-height-full {
+  &.size-full-height {
     height: 100vh;
     .hero-header {
       position: absolute;
