--- a/scss/main/font.scss
+++ b/scss/main/font.scss
@@ -1,6 +1,6 @@
 @import "../mixin/all";
 
-* {
+body, h1, h2, h3, h4, h5, h6, span, p, input, textarea, button {
   color: $text;
   font-family: $sans-serif;
   line-height: 1.5;
